--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,14 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Sublime layout
+*.sublime-workspace
+
+# Zephyr SDK
+/.west
+/bootloader
+/modules
+/tools
+/zephyr
+/build
