--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 3.20.0)
+
+# Add the board
+list(APPEND BOARD_ROOT ${CMAKE_CURRENT_LIST_DIR})
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(ztime)
 
