--- a/prj.conf
+++ b/prj.conf
@@ -1,13 +1,56 @@
-# enable GPIO
-CONFIG_GPIO=y
+# Enable flash operations.
+CONFIG_FLASH=y
+CONFIG_SPI_NOR=y
+CONFIG_SPI=y
+CONFIG_SPI_NRFX=y
+CONFIG_SPI_NOR_IDLE_IN_DPD=y
 
-# Enable RTT
-CONFIG_USE_SEGGER_RTT=y
+# Required by the `taskstat` command.
+#CONFIG_THREAD_MONITOR=y
 
-# enable console
-CONFIG_CONSOLE=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
+# Allow device reboot
+CONFIG_REBOOT=y
 
-# Print a banner on startup.
-CONFIG_BOOT_BANNER=y
+# Enable mcumgr.
+CONFIG_MCUMGR=y
+
+# Ensure an MCUboot-compatible binary is generated.
+CONFIG_BOOTLOADER_MCUBOOT=y
+
+# Enable most core commands.
+CONFIG_MCUMGR_CMD_IMG_MGMT=y
+CONFIG_MCUMGR_CMD_OS_MGMT=y
+
+# Some command handlers require a large stack.
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2304
+
+
+
+# Bluetooth
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_ATT_PREPARE_COUNT=5
+CONFIG_BT_DEVICE_NAME="ztime"
+CONFIG_BT_DEVICE_APPEARANCE=833
+CONFIG_BT_GATT_CLIENT=y
+
+# Remove warning
+CONFIG_BT_GATT_CACHING=n
+
+# Allow for large Bluetooth data packets.
+CONFIG_BT_L2CAP_TX_MTU=252
+CONFIG_BT_BUF_ACL_RX_SIZE=256
+
+# Enable the Bluetooth (unauthenticated) and UART mcumgr transports.
+CONFIG_MCUMGR_SMP_BT=y
+CONFIG_MCUMGR_SMP_BT_AUTHEN=n
+CONFIG_MCUMGR_SMP_UART=n
+
+# Disable Bluetooth unused features
+CONFIG_BT_GATT_READ_MULTIPLE=n
+
+# Disable statistics and statistic names.
+CONFIG_STATS_NAMES=n
+
+# Disable Logging for footprint reduction
+CONFIG_LOG=n
