Add BLE NUS service and BLE logger backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ list(APPEND BOARD_ROOT ${CMAKE_CURRENT_LIST_DIR})
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(ztime)
 
-FILE(GLOB app_sources src/*.c)
+FILE(GLOB app_sources src/*.c src/ble/*.c)
 target_sources(app PRIVATE ${app_sources})
 target_include_directories(app PRIVATE src)
