--- a/prj.conf
+++ b/prj.conf
@@ -52,5 +52,7 @@ CONFIG_BT_GATT_READ_MULTIPLE=n
 # Disable statistics and statistic names.
 CONFIG_STATS_NAMES=n
 
-# Disable Logging for footprint reduction
-CONFIG_LOG=n
+# Logging
+CONFIG_LOG=y
+CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_LOG_BACKEND_BLE_NUS=y
