Add a driver of button

--- a/prj.conf
+++ b/prj.conf
@@ -56,3 +56,8 @@ CONFIG_STATS_NAMES=n
 CONFIG_LOG=y
 CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_LOG_BACKEND_BLE_NUS=y
+
+
+
+# Button
+CONFIG_PINETIME_BUTTON=y
